# rugpi

./: .cspell.json  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTES.md  README.md  deny.toml  lima-env.sh  rugix.code-workspace  rugpi.code-workspace  rust-toolchain.toml  rustfmt.toml  xfile
.cargo/: config.toml
crates/byte-calc/fuzz/: Cargo.toml
crates/byte-calc/fuzz/fuzz_targets/: fuzz_display.rs
crates/libs/byte-calc/: Cargo.toml
crates/libs/byte-calc/fuzz/fuzz_targets/: fuzz_ops.rs  fuzz_parse.rs
crates/libs/byte-calc/src/: lib.rs
crates/libs/reportify/: Cargo.toml
crates/libs/reportify/examples/: simple-report.rs
crates/libs/reportify/src/: lib.rs
crates/libs/rugix-bundle/: Cargo.toml  generate-json-schema.sh  sidex.toml
crates/libs/rugix-bundle/schemas/: manifest.sidex
crates/libs/rugix-bundle/src/: builder.rs  lib.rs  manifest.rs  reader.rs  source.rs
crates/libs/rugix-bundle/src/block_encoding/: block_index.rs  block_table.rs  mod.rs
crates/libs/rugix-bundle/src/format/: decode.rs  encode.rs  macros.rs  mod.rs  stlv.rs  tags.rs
crates/libs/rugix-bundle/src/reader/: block_provider.rs
crates/libs/rugix-chunker/: Cargo.toml
crates/libs/rugix-chunker/examples/: casync-chunker.rs
crates/libs/rugix-chunker/src/: casync.rs  lib.rs
crates/libs/rugix-common/: Cargo.toml
crates/libs/rugix-common/assets/: bootpart.a.env
crates/libs/rugix-common/src/: ctrl_config.rs  fsutils.rs  lib.rs  maybe_compressed.rs
crates/libs/rugix-fs/: Cargo.toml
crates/libs/rugix-fs/examples/: cp.rs
crates/libs/rugix-fs/src/: lib.rs
crates/libs/rugix-fs/tests/: test_file_allocate.rs
crates/libs/rugix-hashes/: Cargo.toml
crates/libs/rugix-hashes/src/: lib.rs  serde.rs
crates/libs/rugix-hooks/: Cargo.toml
crates/libs/rugix-hooks/src/: error.rs  lib.rs
crates/libs/rugix-tasks/: Cargo.toml
crates/libs/rugix-tasks/examples/: abort-indefinite-work.rs
crates/libs/rugix-tasks/src/: lib.rs
crates/libs/rugix-try/: Cargo.toml
crates/libs/rugix-try/src/: lib.rs
crates/libs/rugix-util/: Cargo.toml
crates/libs/rugix-util/src/: main.rs
crates/rugix-fs/: Cargo.toml
crates/rugix-fs/examples/: cp.rs
crates/rugix-fs/src/: lib.rs
crates/rugix-fs/tests/: test_file_allocate.rs
crates/rugpi-admin/: Cargo.toml
crates/rugpi-admin/assets/: index.html
crates/rugpi-admin/src/: main.rs
crates/rugpi-artifact/: Cargo.toml
crates/rugpi-artifact/examples/: pretty-print-stlv.rs  rugpi-artifact.rs
crates/rugpi-artifact/src/: lib.rs  main.rs
crates/rugpi-artifact/src/format/: decode.rs  encode.rs  macros.rs  mod.rs  stlv.rs  tags.rs
crates/rugpi-bakery/: Cargo.toml  sidex.toml
crates/rugpi-bakery/assets/: run-bakery
crates/rugpi-bakery/schemas/: foreign.sidex  images.sidex  layers.sidex  parameters.sidex  projects.sidex  recipes.sidex  repositories.sidex  sizes.sidex  tests.sidex
crates/rugpi-bakery/src/: caching.rs  config.rs  idx_vec.rs  main.rs  recipes.rs  repositories.rs  run.rs  tasks.rs  utils.rs
crates/rugpi-bakery/src/bake/: customize.rs  image.rs  mod.rs
crates/rugpi-bakery/src/cli/: mod.rs
crates/rugpi-bakery/src/oven/: customize.rs  image.rs  mod.rs
crates/rugpi-bakery/src/project/: config.rs  images.rs  layers.rs  library.rs  mod.rs  recipes.rs  repositories.rs
crates/rugpi-bakery/src/repositories/: sources.rs
crates/rugpi-bakery/src/tasks/: bake.rs  customize.rs  extract.rs
crates/rugpi-bakery/src/test/: case.rs  mod.rs  qemu.rs  workflow.rs
crates/rugpi-bakery/src/tester/: mod.rs  qemu.rs
crates/rugpi-bakery/src/utils/: caching.rs  idx_vec.rs  logging.rs  mod.rs  once_cell_ext.rs  prelude.rs
crates/rugpi-cli/: Cargo.toml
crates/rugpi-cli/examples/: progress.rs
crates/rugpi-cli/src/: lib.rs  widgets.rs
crates/rugpi-common/: Cargo.toml
crates/rugpi-common/assets/: bootpart.b.env
crates/rugpi-common/examples/: extract-partitions.rs
crates/rugpi-common/src/: autoboot.rs  boot.rs  ctrl_config.rs  fsutils.rs  img_stream.rs  lib.rs  loop_dev.rs  maybe_compressed.rs  mkfs.rs  mount.rs  partitions.rs  paths.rs  stream_hasher.rs  system.rs
crates/rugpi-common/src/boot/: grub.rs  tryboot.rs  uboot.rs
crates/rugpi-common/src/devices/: mod.rs  rpi.rs
crates/rugpi-common/src/disk/: blkdev.rs  blkpg.rs  gpt.rs  mbr.rs  mod.rs  repart.rs  sfdisk.rs  stream.rs
crates/rugpi-common/src/system/: boot_entries.rs  boot_flow.rs  boot_groups.rs  config.rs  info.rs  mod.rs  partitions.rs  paths.rs  root.rs  slots.rs
crates/rugpi-common/src/utils/: ascii_numbers.rs  const_helpers.rs  units.rs
crates/rugpi-ctrl/: Cargo.toml
crates/rugpi-ctrl/assets/: BANNER.txt
crates/rugpi-ctrl/examples/: set-tryboot-flag.rs
crates/rugpi-ctrl/src/: cli.rs  config.rs  init.rs  main.rs  overlay.rs  partitions.rs  state.rs  utils.rs
crates/rugpi-test/: Cargo.toml
crates/rugpi-test/src/: case.rs  main.rs  qemu.rs
crates/rugpi-util/: Cargo.toml
crates/rugpi-util/files/partition-schemas/: pi-image-boot.json
crates/rugpi-util/src/: main.rs
crates/tools/rugix-admin/: Cargo.toml
crates/tools/rugix-admin/assets/: index.html
crates/tools/rugix-admin/src/: main.rs
crates/tools/rugix-bundler/: .gitignore  Cargo.toml
crates/tools/rugix-bundler/src/: main.rs
crates/tools/rugix-ctrl/: Cargo.toml  generate-json-schema.sh  sidex.toml
crates/tools/rugix-ctrl/assets/: BANNER.txt
crates/tools/rugix-ctrl/schemas/: bootstrapping.sidex  output.sidex  system.sidex
crates/tools/rugix-ctrl/src/: cli.rs  config.rs  http_source.rs  init.rs  main.rs  overlay.rs  slot_db.rs  state.rs  system_state.rs  utils.rs
crates/tools/rugpi-bakery/: Cargo.toml  generate-json-schema.sh
crates/tools/rugpi-bakery/schemas/: artifacts.sidex  images.sidex  layers.sidex  systems.sidex  tests.sidex
crates/tools/rugpi-bakery/src/: config.rs  main.rs
crates/tools/rugpi-ctrl/: Cargo.toml  sidex.toml
crates/tools/rugpi-ctrl/examples/: set-tryboot-flag.rs
crates/tools/rugpi-ctrl/schemas/: bootstrapping.sidex  state.sidex  system.sidex
crates/tools/rugpi-ctrl/src/: cli.rs  init.rs  main.rs
(+661 files in other folders)
