[workspace]
members = [
    "crates/libs/*",
    "crates/libs/*/fuzz",
    "crates/tools/*",
    "xtask"
]
resolver = "2"

[workspace.package]
authors = ["Silitics GmbH <info@silitics.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silitics/rugpi/"
homepage = "https://oss.silitics.com/rugpi/"

[workspace.dependencies]
# Third-party crates.
bytes = "1.7.1"
clap = { version = "4.5.24", features = ["derive"] }
nix = { version = "0.29", features = ["ioctl", "fs", "mount", "process", "zerocopy"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"

# In-house crates.
sidex = { git = "https://github.com/silitics/sidex.git" }
sidex-build-rs = { git = "https://github.com/silitics/sidex.git" }
sidex-serde = { git = "https://github.com/silitics/sidex.git" }
xscript = { version = "0.4.0", features = ["tokio"] }

# Colocated but not Rugix-specific crates.
byte-calc = { path = "crates/libs/byte-calc", features = ["serde"] }
reportify = { path = "crates/libs/reportify" }

# Rugix-specific crates.
rugix-fs = { path = "crates/libs/rugix-fs" }
rugix-tasks = { path = "crates/libs/rugix-tasks" }
rugix-try = { path = "crates/libs/rugix-try" }
rugpi-cli = { path = "crates/libs/rugpi-cli" }
rugpi-common = { path = "crates/libs/rugpi-common" }

[workspace.lints.clippy]
needless_borrows_for_generic_args = "allow"
new_without_default = "allow"