[workspace]
members = [
    "crates/libs/*",
    "crates/libs/*/fuzz",
    "crates/tools/*",
    "xtask"
]
resolver = "2"

[workspace.package]
authors = ["Silitics GmbH <info@silitics.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silitics/rugpi/"
homepage = "https://oss.silitics.com/rugpi/"

[workspace.dependencies]
# Third-party crates.
bytes = "1.7.1"
clap = { version = "4.5.24", features = ["derive"] }
console = "0.15.10"
ctrlc = { version = "3.4.5", features = ["termination"] }
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
hashbrown = "0.15.2"
hex = "0.4.3"
libc = "0.2.169"
nix = { version = "0.29", features = ["ioctl", "fs", "mount", "process", "zerocopy"] }
pin-project = "1.1.8"
scoped-tls = "1.0.1"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1"
xz2 = "0.1.7"

# In-house crates.
sidex = { git = "https://github.com/silitics/sidex.git" }
sidex-build-rs = { git = "https://github.com/silitics/sidex.git" }
sidex-serde = { git = "https://github.com/silitics/sidex.git" }
xscript = { version = "0.4.0", features = ["tokio"] }

# Colocated but not Rugix-specific crates.
byte-calc = { path = "crates/libs/byte-calc", features = ["serde", "bytes"] }
reportify = { path = "crates/libs/reportify" }

# Rugix-specific crates.
rugix-bundle = { path = "crates/libs/rugix-bundle" }
rugix-fs = { path = "crates/libs/rugix-fs" }
rugix-hashes = { path = "crates/libs/rugix-hashes" }
rugix-hooks = { path = "crates/libs/rugix-hooks" }
rugix-tasks = { path = "crates/libs/rugix-tasks" }
rugpi-cli = { path = "crates/libs/rugpi-cli" }
rugpi-common = { path = "crates/libs/rugpi-common" }

[workspace.lints.clippy]
needless_borrows_for_generic_args = "allow"
new_without_default = "allow"