[package]
name = "rugpi-admin"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
axum = { version = "0.6.19", features = ["multipart"] }
clap = { version = "4.3.17", features = ["derive"] }
indoc = "2.0.3"
rugpi-common = { version = "0.1.0", path = "../rugpi-common" }
tokio = { version = "1.29.1", features = ["full"] }
xscript = "0.1.2"
