[package]
name = "rugpi-artifact"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bytes.workspace = true
console = "0.15.8"
serde.workspace = true
sha2 = "0.10.8"
thiserror = "1.0.63"

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde_json = "1.0.127"

[lints]
workspace = true
