[package]
name = "rugpi-artifact"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
reportify.workspace = true
rugpi-common.workspace = true
serde_json = "1.0.127"
sha2 = "0.10.8"

[lints]
workspace = true
