[package]
name = "rugpi-bakery"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.1.0"
hex = "0.4.3"
indicatif = "0.17.7"
indoc = "2.0.5"
nix = { workspace = true, features = ["process", "fs"] }
reqwest = { version = "0.11.23", features = ["blocking", "rustls-tls", "gzip", "deflate"], default-features = false }
rugpi-common = { path = "../rugpi-common" }
serde = { version = "1.0.171", features = ["derive", "rc"] }
sha1 = "0.10.5"
tempfile = "3.8.1"
thiserror = "1.0.43"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
xscript.workspace = true

[lints]
workspace = true
