[package]
name = "rugpi-bakery"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.1.0"
hex = "0.4.3"
indicatif = "0.17.7"
indoc = "2.0.5"
nix = { workspace = true, features = ["process", "fs"] }
reqwest = { version = "0.11.23", features = ["blocking", "rustls-tls", "gzip", "deflate"], default-features = false }
russh = "0.49.2"
russh-sftp = "2.0.6"
serde = { version = "1.0.171", features = ["derive", "rc"] }
sha1 = "0.10.5"
tempfile = "3.8.1"
thiserror = "1.0.43"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.8"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
xscript.workspace = true
tracing.workspace = true

reportify.workspace = true
rugpi-cli.workspace = true
rugpi-common.workspace = true

[lints]
workspace = true
