[package]
name = "rugpi-cli"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
