[package]
name = "rugpi-cli"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
console = "0.15.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

tracing.workspace = true

[lints]
workspace = true
