[package]
name = "rugpi-common"
description = "Common utilities for Rugpi Ctrl and Rugpi Bakery."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
crc32fast = "1.3.2"
indoc = "2.0.3"
nix.workspace = true
serde.workspace = true
thiserror = "1.0.50"
toml = "0.8.10"
xscript.workspace = true
xz2 = "0.1.7"
tracing.workspace = true
serde_json = "1.0.117"
uuid = "1.8.0"
rand = "0.8.5"
sha1 = "0.10.6"

[dev-dependencies]
clap.workspace = true

[lints]
workspace = true
