[package]
name = "rugpi-common"
description = "Common utilities for Rugpi Ctrl and Rugpi Bakery."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
console = "0.15.8"
crc32fast = "1.3.2"
digest = "0.10.7"
hex = "0.4.3"
indoc = "2.0.3"
nix.workspace = true
rand = "0.8.5"
serde_json = "1.0.117"
serde.workspace = true
sha1 = "0.10.6"
thiserror = "1.0.63"
toml = "0.8.10"
tracing.workspace = true
uuid = "1.8.0"
xscript.workspace = true
xz2 = "0.1.7"
indexmap = { version = "2.5.0", features = ["serde"] }
tempfile = "3.12.0"

[dev-dependencies]
clap.workspace = true

[features]
compat-rauc = []
compat-mender = []
nightly = []
default = ["compat-rauc", "compat-mender"]

[lints]
workspace = true
