[package]
name = "rugpi-ctrl"
description = "Manage a Rugpi system."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
serde.workspace = true
nix = "0.26.2"
anyhow.workspace = true
xscript.workspace = true
indoc = "2.0.2"
toml = "0.7.6"
rugpi-common = { path = "../rugpi-common" }
tempfile = "3.8.1"
