[package]
name = "rugpi-ctrl"
description = "Manage a Rugpi system."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
nix.workspace = true
anyhow.workspace = true
xscript.workspace = true
indoc = "2.0.2"
toml = "0.7.6"
rugpi-common = { path = "../rugpi-common" }
tempfile = "3.8.1"
sha2 = "0.10.8"
hex = "0.4.3"

[lints]
workspace = true
