[package]
name = "rugpi-test"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.83"
clap.workspace = true
reportify.workspace = true
rugpi-cli.workspace = true
russh = "0.49.2"
russh-sftp = "2.0.6"
serde.workspace = true
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"

[lints]
workspace = true
