[package]
name = "rugpi-util"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
reportify.workspace = true
rugpi-common = { version = "0.1.0", path = "../rugpi-common" }
serde.workspace = true
serde_json = "1.0.117"
xscript.workspace = true

[lints]
workspace = true
