[package]
name = "byte-calc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.byte-calc]
path = ".."

[[bin]]
name = "fuzz_display"
path = "fuzz_targets/fuzz_display.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ops"
path = "fuzz_targets/fuzz_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false
