[package]
name = "byte-calc"
description = "Helper crate to work with bit, byte, and block sizes."
edition = "2021"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
