[package]
name = "reportify"
edition = "2021"
description = "A library for error handling and reporting."
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["spantrace", "backtrace"]
spantrace = ["dep:tracing-error"]
backtrace = ["dep:backtrace"]

[dependencies]
backtrace = { version = "0.3.74", optional = true }
console = "0.15.10"
tracing-error = { version = "0.2.1", optional = true }

[lints]
workspace = true

[dev-dependencies]
thiserror = "2.0.3"
