[package]
name = "rugix-common"
description = "Common utilities for Rugix Ctrl and Rugix Bakery."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
console = "0.15.8"
crc32fast = "1.3.2"
digest = "0.10.7"
hex = "0.4.3"
indexmap = { version = "2.5.0", features = ["serde"] }
indoc = "2.0.3"
rand = "0.8.5"
serde_json = "1.0.117"
sha1 = "0.10.6"
tempfile = "3.12.0"
thiserror = "1.0.63"
toml = "0.8.10"
uuid = "1.8.0"
xz2 = "0.1.7"

bytes.workspace = true
nix.workspace = true
tracing.workspace = true
serde.workspace = true

xscript.workspace = true

reportify.workspace = true

[dev-dependencies]
clap.workspace = true

[features]
compat-rauc = []
compat-mender = []
nightly = []
default = ["compat-rauc", "compat-mender"]

[lints]
workspace = true
