[package]
name = "rugix-fs"
description = "Abortable, blocking filesystem APIs with good error reporting."
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tempfile = "3.15.0"
walkdir = "2.5.0"

nix.workspace = true
tracing.workspace = true

byte-calc.workspace = true
reportify.workspace = true

rugix-tasks.workspace = true

[lints]
workspace = true
