[package]
name = "rugix-tasks"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
nightly = ["rugix-try/nightly"]

[dependencies]
tokio.workspace = true
flume = { version = "0.11.1", features = ["async"] }

rugix-try.workspace = true
futures = "0.3.31"

[lints]
workspace = true
