[package]
name = "rugix-tasks"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
flume.workspace = true
futures.workspace = true
pin-project.workspace = true
scoped-tls.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
