[package]
name = "rugix-try"
description = "Stable implementation of the `Try` trait and related functionality."
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

[features]
nightly = []

[lints]
workspace = true
