[package]
name = "rugix-util"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json = "1.0.117"

xscript.workspace = true

reportify.workspace = true

rugix-common.workspace = true

[lints]
workspace = true
