[package]
name = "rugix-ctrl"
description = "Manage a Rugix system."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
hex = "0.4.3"
indexmap = "2.5.0"
indoc = "2.0.2"
serde_json = "1.0.133"
sha2 = "0.10.8"
tempfile = "3.8.1"
toml = "0.7.6"
uuid = { version = "1.11.0", features = ["v4"] }

clap.workspace = true
nix.workspace = true
serde.workspace = true
tracing.workspace = true

sidex-serde.workspace = true
sidex.workspace = true
xscript.workspace = true

reportify.workspace = true

byte-calc.workspace = true
rugix-bundle.workspace = true
rugix-cli.workspace = true
rugix-common.workspace = true
rugix-fs.workspace = true
rugix-hashes.workspace = true
rugix-hooks.workspace = true
hashbrown.workspace = true

[lints]
workspace = true

[build-dependencies]
sidex-build-rs.workspace = true
