[package]
name = "rugpi-bakery"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.1.0"
hex = "0.4.3"
indicatif = "0.17.7"
indoc = "2.0.5"
reqwest = { version = "0.11.23", features = ["blocking", "rustls-tls", "gzip", "deflate"], default-features = false }
russh = "0.49.2"
russh-sftp = "2.0.6"
serde = { version = "1.0.171", features = ["derive", "rc"] }
sha1 = "0.10.5"
tempfile = "3.8.1"
thiserror = "1.0.43"
toml = "0.8.8"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }

nix.workspace = true
tokio.workspace = true
tracing.workspace = true
xscript.workspace = true

sidex-serde.workspace = true
sidex.workspace = true

byte-calc.workspace = true
reportify.workspace = true

rugix-tasks.workspace = true
rugix-fs.workspace = true
rugpi-cli.workspace = true
rugpi-common.workspace = true
rugix-bundle.workspace = true

[lints]
workspace = true

[build-dependencies]
sidex-build-rs.workspace = true
