[package]
name = "rugpi-ctrl"
description = "Manage a Rugpi system."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
hex = "0.4.3"
indexmap = "2.5.0"
indoc = "2.0.2"
serde_json = "1.0.133"
sha2 = "0.10.8"
tempfile = "3.8.1"
toml = "0.7.6"
uuid = { version = "1.11.0", features = ["v4"] }

clap.workspace = true
nix.workspace = true
serde.workspace = true
tracing.workspace = true

xscript.workspace = true

reportify.workspace = true

rugpi-cli.workspace = true
rugpi-common.workspace = true
rugix-hooks.workspace = true

[lints]
workspace = true
